--- a/source/shopify.app.toml
+++ b/source/shopify.app.toml
@@ -3,7 +3,7 @@
 client_id = "e57bb457337ea30ffd1c04ad8aa8a4cb"
 name = "app2"
 handle = "app2-274"
-application_url = "https://example.com/"
+application_url = "https://incorrect-enables-tribunal-flight.trycloudflare.com"
 embedded = true
 
 [build]
@@ -13,10 +13,14 @@ include_config_on_deploy = true
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = "read_customers, read_orders, read_returns"
+scopes = "write_products"
 
 [auth]
-redirect_urls = [ "https://example.com/api/auth" ]
+redirect_urls = [
+  "https://incorrect-enables-tribunal-flight.trycloudflare.com/auth/callback",
+  "https://incorrect-enables-tribunal-flight.trycloudflare.com/auth/shopify/callback",
+  "https://incorrect-enables-tribunal-flight.trycloudflare.com/api/auth/callback"
+]
 
 [webhooks]
 api_version = "2024-10"
