--- a/source/shopify.app.toml
+++ b/source/shopify.app.toml
@@ -13,7 +13,7 @@ include_config_on_deploy = true
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = "write_products"
+scopes = "read_customers, read_orders, read_returns"
 
 [auth]
 redirect_urls = [
